public/css/frontend.css
/* ... */
@media all and (max-width: 768px) {
  .text-left-xs {
    text-align: left !important;
  }
}
/*!---------- 3.1. TYPOGRAPHY - LISTS ----------*/
ul[data-bullet] li {
  line-height: 32px;
}
ul[data-bullet] li i:first-child {
  margin-right: 16px;
  transform: scale(1.5);
  -webkit-transform: scale(1.5);
  display: inline-block;
}
ul.lead li {
  font-size: 16px;
  line-height: 40px;
}
/*!---------- 4. COLOURS ----------*/
.bg-primary {
  background: #47b475 !important;
}
.bg-secondary {
  background: #f8f8f8;
}
.bg-white {
  background: #fff;
}
.bg-dark {
  background: #292929;
}
footer.bg-dark {
  background: rgba(0, 0, 0, 0.5);
  z-index: 2;
}
.color-body {
  color: #666;
}
.color-primary {
  color: #47b475 !important;
}
.color-red {
  color: #e31d3b !important;
}
.color-white {
  color: #fff;
}
/*!---------- 5. SECTIONS ----------*/
section,
footer {
  padding: 96px 0;
  position: relative;
  overflow: hidden;
}
footer {
  padding: 30px 0;
}
.fullscreen {
  height: 100vh;
}
.bg-dark h1,
nav.bg-dark h1,
footer.bg-dark h1,
.bg-primary h1,
.bg-dark h2,
nav.bg-dark h2,
footer.bg-dark h2,
.bg-primary h2,
.bg-dark h3,
nav.bg-dark h3,
footer.bg-dark h3,
.bg-primary h3,
.bg-dark h4,
nav.bg-dark h4,
footer.bg-dark h4,
.bg-primary h4,
.bg-dark h5,
nav.bg-dark h5,
footer.bg-dark h5,
.bg-primary h5,
.bg-dark h6,
nav.bg-dark h6,
footer.bg-dark h6,
.bg-primary h6 {
  color: #fff;
}
@media all and (max-width: 768px) {
  section {
    padding: 80px 0;
  }
}
.overlay:before {
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: #292929;
  opacity: 0.3;
  z-index: 2;
}
.overlay-heavy:before {
  opacity: .6;
}
.bg-light.overlay:before {
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: #fff;
  opacity: 0.1;
  z-index: 2;
}
.image-bg h1,
.image-bg h2,
.image-bg h3,
.image-bg h4,
.image-bg h5,
.image-bg h6 {
  color: #fff;
}
.image-bg p,
.image-bg span,
.image-bg li {
  color: #fff;
}
.image-bg .container,
.image-bg div[class*='col-'] {
  position: relative;
  z-index: 3;
}
.container.image-bg .row {
  position: relative;
  z-index: 3;
}
.background-image-holder {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
  background: #292929;
  background-size: cover;
  background-position: 50% 50%;
  transition: all 0.3s ease;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  opacity: 0;
}
.background-image-holder img {
  display: none;
}
.background-multiply .background-image-holder {
  background-color: #47b475 !important;
  background-blend-mode: multiply;
}
.background-image-holder.fadeIn {
  opacity: 1;
}
.parallax > .background-image-holder,
.parallax .slides li > .background-image-holder {
  height: 100vh;
  top: -50vh;
  transition: all 0s ease !important;
  transition: opacity 0.3s ease !important;
  -webkit-transform-style: preserve-3d;
}
.parallax:first-child .slides li > .background-image-holder,
.parallax:first-child .background-image-holder {
  top: 0;
}
.main-container > a:first-child + .parallax .background-image-holder {
  top: 0;
}
@media all and (max-width: 768px) {
  .parallax > .background-image-holder,
  .parallax .slides li > .background-image-holder {
    top: 0 !important;
    transform: none !important;
    -webkit-transform: none !important;
  }
}
/*!---------- 6. BUTTONS ----------*/
.btn {
  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
  border: 2px solid #47b475;
  padding: 0 26px;
  height: 51px;
  min-width: 200px;
  line-height: 49px;
  font-size: 13px;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 1px;
  border-radius: 0;
  color: #47b475;
  text-align: center;
  transition: all 0.3s ease;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  margin-right: 8px;
  margin-bottom: 24px;
}
.btn:last-child,
.btn:last-of-type {
  margin-right: 0;
}
.btn.hovered:hover {
  background: #47b475;
  color: #fff;
}
.btn-icon {
  width: 40px;
  height: 40px;
  font-size: 20px;
  min-width: 0;
  padding: 0;
  line-height: 38px;
}
.btn-lg {
  height: 50px;
  line-height: 46px;
  min-width: 200px;
}
.btn-icon.btn-lg {
  width: 50px;
  height: 50px;
  line-height: 49px;
  font-size: 24px;
  min-width: 0;
}
.btn-icon.btn-sm {
  width: 30px;
  height: 30px;
  line-height: 29px;
  font-size: 13px;
  min-width: 0;
  padding: 0 0 0 1px!important;
}
.btn-sm {
  height: 30px;
  font-size: 11px;
  line-height: 27px;
  min-width: 0;
}
.btn-filled {
  background: #47b475;
  color: #fff;
}
.btn-white,
.image-bg .btn,
.image-bg .btn:visited {
  color: #fff;
  border-color: #fff;
}
.btn-white:hover,
.image-bg .btn:hover,
.image-bg .btn:visited:hover {
  background: #fff;
  color: #222;
}
.image-bg .btn.btn-filled,
.image-bg .btn-filled:visited {
  border-color: #47b475;
}
.image-bg .btn-filled:hover {
  border-color: #fff;
}
.btn-rounded {
  border-radius: 25px;
}
body.btn-rounded .btn {
  border-radius: 25px !important;
}
.bg-light .btn {
  border-color: #222;
  color: #222;
}
.bg-light .btn:visited,
.bg-light .btn:visited:hover {
  color: #222;
}
.bg-light .btn-filled,
.bg-light .btn-filled:visited {
  color: #fff;
}
.btn:visited {
  color: #47b475;
}
.btn-white:visited {
  color: #fff;
}
.btn-filled:visited {
  color: #fff;
}
.btn.bg-dark {
  color: #fff;
  border-color: #292929;
}
.btn.bg-dark:hover {
  background: #434343;
}
.bg-primary .btn {
  color: #fff;
  border-color: #fff;
}
.bg-primary .btn:hover {
  background: #fff;
  color: #47b475;
}
/*!---------- 7. NAVIGATION ----------*/
.nav-container {
  -webkit-backface-visibility: hidden;
  max-width: 100%;
}
nav {
  background: #fff;
  -webkit-backface-visibility: hidden;
  max-width: 100%;
}
nav ul {
  margin-bottom: 0;
}
.module {
  display: inline-block;
  padding: 0 32px;
}
.module-group {
  display: inline-block;
}
.module.left,
.module-group.left {
  float: left;
}
.module.right,
.module-group.right {
  float: right;
}
/* ... */

